--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -57,6 +57,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 100px;
+    margin-bottom: 70px;
 }
 
 .project-image>img {
